spikes/shapes/shape-evidence/tests/ui/fail/exact_shape_mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/fail/exact_shape_mismatch.rs:19:44
   |
19 |     let _ = builder.pointwise_shaped(left, right);
   |                     ----------------       ^^^^^ expected `ShapedValue<F32, Exact<TwoByThree>>`, found `ShapedValue<F32, Exact<ThreeByTwo>>`
   |                     |
   |                     arguments to this method are incorrect
   |
   = note: expected struct `ShapedValue<F32, Exact<TwoByThree>>`
              found struct `ShapedValue<F32, Exact<ThreeByTwo>>`
note: method defined here
  --> src/lib.rs
   |
   |     pub fn pointwise_shaped<T, E: ShapeEvidence>(
   |            ^^^^^^^^^^^^^^^^
